RESOLVED FIXED278866
[JSC] Fix Atomics.wait by handling termination cases
https://bugs.webkit.org/show_bug.cgi?id=278866
Summary [JSC] Fix Atomics.wait by handling termination cases
Yijia Huang
Reported 2024-08-29 10:05:24 PDT
Attachments
Yijia Huang
Comment 1 2024-08-29 10:22:36 PDT
EWS
Comment 2 2024-08-30 08:52:29 PDT
Committed 282974@main (dea928b186e9): <https://commits.webkit.org/282974@main> Reviewed commits have been landed. Closing PR #32896 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.