[JSC] Fix Atomics.wait by handling termination cases https://bugs.webkit.org/show_bug.cgi?id=278866 rdar://129234981

Reviewed by Yusuke Suzuki.

Atomics.wait is used in worker threads. It should handle
termination cases; otherwise, a memory leak can occur when
the worker threads are waiting with an infinite timeout
while the threads are signaled for termination.

* Source/JavaScriptCore/runtime/AtomicsObject.cpp:
(JSC::atomicsWaitImpl):
* Source/JavaScriptCore/runtime/VM.cpp:
(JSC::VM::hasSyncWaiter):
(JSC::VM::syncWaiter):
* Source/JavaScriptCore/runtime/VM.h:
* Source/JavaScriptCore/runtime/VMTraps.cpp:
(JSC::VMTraps::fireTrap):
* Source/JavaScriptCore/runtime/WaiterListManager.cpp:
(JSC::WaiterListManager::waitSyncImpl):
(JSC::WaiterListManager::notifyWaiterImpl):
(JSC::WaiterListManager::unregister):
* Source/JavaScriptCore/runtime/WaiterListManager.h:

Canonical link: https://commits.webkit.org/282974@main